--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ media/
 
 app/__pycache__/settings.cpython-311.pyc
 app/__pycache__/urls.cpython-311.pyc
+app/__pycache__/settings.cpython-311.pyc
+app/__pycache__/settings.cpython-311.pyc
